@@ -5360,11 +5360,6 @@
   <block id="7fc21546461474a1cc543852dc120330" category="paragraph">如果啟動 Cloud Volumes ONTAP 執行個體時發生任何問題，請檢閱失敗訊息。您也可以選取工作環境、然後按一下重新建立環境。</block>
   <block id="d036b4a2aa80729ab508e1851458f506" category="cell">選擇 AWS 認證資料和市場訂閱、以搭配此 Cloud Volumes ONTAP 款功能系統使用。按一下*新增訂閱*、將所選認證資料與新的AWS Marketplace訂閱建立關聯。訂閱可以是一年一度的合約、或Cloud Volumes ONTAP 是以每小時的費率支付。如果您直接向 NetApp 購買授權（請自帶授權（ BYOL ）），則不需要 AWS 訂閱。<block ref="2ae6dc7cea05e6172a8f0e381f70d632" category="inline-link-rx"></block>。</block>
   <block id="fc687f57dc8188e5dad217858c078354" category="section-title">Cloud Volumes ONTAP 中的按鍵旋轉</block>
-  <block id="c8f70aa37f5c88b6da2024d42bae9616" category="paragraph">如果您建立新版本的金鑰， Cloud Volumes ONTAP 會自動使用最新的金鑰版本，確保資料安全無虞，無需手動更新。</block>
-  <block id="7463254e31b93d5b76992c84139a17de" category="list-text">瀏覽至 Azure 入口網站中的金鑰資料保險箱。</block>
-  <block id="d6cff41b1c8a33920bc46aba04b89485" category="list-text">選取您要旋轉的按鍵。</block>
-  <block id="38b4782700181268adc6819ae7534a0f" category="list-text">按一下 * 新版本 * 以產生金鑰的新版本。</block>
-  <block id="d35d0e531d2de4587a8bd21e51823f97" category="paragraph">建立新版本後， Cloud Volumes ONTAP 會自動偵測並使用最新版本的金鑰進行加密。</block>
   <block id="d2a95dd3692cce58be8541add2bc6897" category="paragraph">支援大部分的組態。如果您的 Cloud Volumes ONTAP 系統執行的是最新版本，那麼您可以繼續使用。<block ref="f2e6a88e181ee9519c72412b23fc6e17" category="inline-link-macro-rx"></block>。</block>
   <block id="1a59c4cde0b6364677026791f943ea0f" category="paragraph">應在 Aggregate 上啟用資料分層功能，以便在磁碟區上啟用。您應該瞭解新磁碟區和現有磁碟區的需求。<block ref="7beee552935977f4dc8f9885d22b65a0" category="inline-xref-macro-rx"></block>。</block>
   <block id="c64796eb83e1bb434daed77e0937d1b4" category="paragraph">BlueXP  會在建立系統時建立物件存放區以存放冷資料<block ref="dbb78a2cc39acf14e084217f8235322a" category="inline-xref-macro-rx"></block>。之後，您只需要在磁碟區上啟用資料分層<block ref="7f499208f2ff911432bf2cd70bde52dd" category="inline-xref-macro-rx"></block>功能（在某些情況下，）。</block>
@@ -5802,4 +5797,17 @@
   <block id="7533d0f4870d29edf1d705a15d4f71e3" category="sidebar">管理 AWS 中的儲存 VM</block>
   <block id="db5cf7834d39ce63219e28d402aeb9c2" category="sidebar">管理 Azure 中的儲存 VM</block>
   <block id="137413da40700294b3660243904ade25" category="sidebar">在 Google Cloud 中管理儲存 VM</block>
+  <block id="5920daf334ecef8057dd1e1d15f6124e" category="doc">啟用 Cloud Volumes ONTAP 9.14.1 的私有模式部署</block>
+  <block id="f2035db09bb2be2db0508915fa584149" category="paragraph">您現在可以在 AWS ， Azure 和 Google Cloud 中以私有模式部署 Cloud Volumes ONTAP 9.14.1 。Cloud Volumes ONTAP 9.14.1 的單一節點和高可用度（ HA ）部署均啟用私有模式。</block>
+  <block id="62bd7572081df25dd3f1f52151883c4a" category="inline-link">瞭解 BlueXP 部署模式</block>
+  <block id="dc748283e7593515df9e8f2759a85349" category="paragraph">如需有關私有模式部署的詳細資訊<block ref="312f421b6dd5cf62286ecf6a82a8132e" category="inline-link-rx"></block>，請參閱。</block>
+  <block id="210dc676779eae6698e4064fd965bda8" category="paragraph">您應該在 Azure 入口網站上設定加密金鑰。如需設定金鑰和設定金鑰旋轉的相關資訊，請參閱下列 Microsoft Azure 文件主題：</block>
+  <block id="348c2304e1a6efb529d00b9bacd96a8e" category="inline-link">在 Azure Key Vault 中設定密碼編譯金鑰自動旋轉</block>
+  <block id="f4d57411fbf6c0075178b1e3767b496e" category="list-text"><block ref="f4d57411fbf6c0075178b1e3767b496e" category="inline-link-rx"></block></block>
+  <block id="881f8c1da4935c7dbe1f6d696a16cd9c" category="inline-link">Azure PowerShell - 啟用客戶管理的金鑰</block>
+  <block id="4a9f4b73b48b26dea345a1977b58dd51" category="list-text"><block ref="4a9f4b73b48b26dea345a1977b58dd51" category="inline-link-rx"></block></block>
+  <block id="a15076d8f5fd9af7af6dec9ab282588e" category="inline-link">已在 Azure 入口網站上啟用金鑰旋轉</block>
+  <block id="71b5648e677d1a5ebf3d343f3c10eb54" category="admonition">設定金鑰之後，請確定您擁有<block ref="7b90d7bac505d4641bd5cd9a13a09c6c" category="inline-link-rx"></block>，以便 Cloud Volumes ONTAP 能夠使用新的金鑰。</block>
+  <block id="5b41754d54a59a01d58e45b59544d3a6" category="paragraph">在建立及啟用新版金鑰時， Cloud Volumes ONTAP 會自動偵測並使用最新版的加密功能，確保您的資料安全無虞，無需手動更新。</block>
+  <block id="5f2734b84896bdabcf7fd3574325d116" category="section-title">2025 年 3 月 28 日</block>
 </blocks>
